fix: wrong position and shadow of the cart button

--- a/packages/shared/styles/components/atoms/SfChevron.scss
+++ b/packages/shared/styles/components/atoms/SfChevron.scss
@@ -1,7 +1,6 @@
 @import "../../helpers";
 .sf-chevron {
   position: var(--chevron-position, relative);
-  display: block;
   width: var(--chevron-size, 1.25rem);
   height: var(--chevron-size, 1.25rem);
   cursor: pointer;
